# Codex-Dream-Skin

./: .editorconfig  .gitattributes  .gitignore  PLAN.md  README.en.md  README.md  SECURITY.md  fix_72.txt  fix_73.txt  fix_75.txt  fix_80.txt  fix_81.txt  fix_82.txt  fix_83.txt  fix_85.txt  fix_86.txt
docs/: BUSINESS.md  KIMI_THEME_AUTHORING_PROMPT.md  PRD.md  PROJECT.md  RECOMMENDATIONS.md  TECHNICAL.md  THEME_PACKAGE.md  VALIDATION.md  background-generation-prompts.md  dreamskin-package.md  index.html  install-macos.md  install-windows.md  platforms.md  portable-theme-authoring.md  promo-copy.md  showcase.css  showcase.js
macos/: CHANGELOG.md  CLIENT_DEPLOY_PROMPT.md  NOTICE.md  Open Dream Skin Studio.command  README.md  SKILL.md  Start Dream Skin Studio.command  Start Theme Studio.command  package.json
manager/: CHANGELOG.md  README.md  index.html  package-lock.json  package.json
manager/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
manager/src-tauri/capabilities/: default.json
manager/src-tauri/icons/: icon.icns
manager/src-tauri/src/: lib.rs  main.rs
runtime/: dream-skin.css  renderer-inject.js
schemas/: README.md  dreamskin-manifest.schema.json  dreamskin-package-v1.schema.json  dreamskin-source-manifest.schema.json  dreamskin-theme.schema.json  theme-v1.schema.json
scripts/: build-unified-release.sh  dream-skin-profile.ps1  setup-dream-skin.ps1  uninstall-dream-skin.ps1
tests/: json-schema-subset.mjs  theme-contract.test.mjs  theme-import-core.test.mjs  theme-package-cli.test.mjs  (+5 more)
tools/: selectors.json  (+3 more)
(+346 files in other folders)
